--- a/geofree.html
+++ b/geofree.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
   <div class="wrapper">
-    <div class="cover d-flex" style="background-image: url(img/giveaway.jpg)">
+    <div class="cover d-flex" style="background-image: url(img/geofree/giveaway.jpg)">
       <div class="cover-box p-5 m-auto text-center">
         <h1 class="display-1">Geofree</h1>
         <p>Find free items easily</p>
@@ -233,31 +233,31 @@
         <div id="slideshow" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="img/1.png" alt="First slide">
+              <img class="d-block w-100" src="img/geofree/1.png" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/2.png" alt="Second slide">
+              <img class="d-block w-100" src="img/geofree/2.png" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/3.png" alt="Third slide">
+              <img class="d-block w-100" src="img/geofree/3.png" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/4.png" alt="Third slide">
+              <img class="d-block w-100" src="img/geofree/4.png" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/5.png" alt="Third slide">
+              <img class="d-block w-100" src="img/geofree/5.png" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/6.png" alt="Third slide">
+              <img class="d-block w-100" src="img/geofree/6.png" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/7.png" alt="Third slide">
+              <img class="d-block w-100" src="img/geofree/7.png" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/8.png" alt="Third slide">
+              <img class="d-block w-100" src="img/geofree/8.png" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/9.png" alt="Third slide">
+              <img class="d-block w-100" src="img/geofree/9.png" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#slideshow" role="button" data-slide="prev">
@@ -284,13 +284,13 @@
         <div id="slideshow-analyze" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="img/analyze-1.png" alt="First slide">
+              <img class="d-block w-100" src="img/geofree/analyze-1.png" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/analyze-2.png" alt="Second slide">
+              <img class="d-block w-100" src="img/geofree/analyze-2.png" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/analyze-3.png" alt="Third slide">
+              <img class="d-block w-100" src="img/geofree/analyze-3.png" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#slideshow-analyze" role="button" data-slide="prev">
@@ -311,18 +311,44 @@
           <div class="col-12">
             <h3 class="mb-4 text-center">Sketching and Wireframing</h3>
             <p><b>Sketching</b></p>
-            <p class="mb-5">First we sketched some of the web pages and then I turned all our sketches into wireframes
-              using
-              Figma.</p>
+            <p class="mb-5">I sketched some of the web pages</p>
             <div class="row">
               <div class="col-12 col-md-6">
-                <img class="img-fluid" src="img/sketching.jpg" alt="sketching" style="max-height: 800px;">
+                <img class="img-fluid" src="img/geofree/sketching.jpg" alt="sketching" style="max-height: 800px;">
               </div>
               <div class="col-12 col-md-6">
-                <img class="img-fluid" src="img/Homepage-Geofree.gif" alt="sketching-gif" style="max-height: 800px;">
+                <img class="img-fluid" src="img/geofree/Homepage-Geofree.gif" alt="sketching-gif" style="max-height: 800px;">
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <div class="m-5">
+        <p><b>Wireframing</b></p>
+        <p class="mb-5">I turned all our sketches into wireframes using Figma.</p>
+        <div id="slideshow-wireframe" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="img/geofree/wireframe-1.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/geofree/wireframe-2.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/geofree/wireframe-3.png" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#slideshow-wireframe" role="button" data-slide="prev">
+            <div class="carousel-control-wrapper">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </div>
+          </a>
+          <a class="carousel-control-next" href="#slideshow-wireframe" role="button" data-slide="next">
+            <div class="carousel-control-wrapper">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </div>
+          </a>
         </div>
       </div>
     </div>
