--- a/index.html
+++ b/index.html
@@ -1,87 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Farida Elchuzade</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="styles.css">
-  <title>Farida Elchuzade</title>
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="/index.html"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item text-center active">
-            <a class="nav-link mx-2" href="/index.html">Home</a>
-          </li>
-          <li class="nav-item text-center">
-            <a class="nav-link mx-2" href="/about.html">About</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="wrapper">
-    <div class="container py-5">
-      <h1 class="display-4 my-5">I'm Farida, a UX designer based in Germany, passionate about creating beautiful and
-        accessible
-        digital products.
-      </h1>
-    </div>
-    <div class="container py-5">
-      <h3 class="mb-5 display-6 text-center">Case Studies</h3>
-      <div class="row mb-5">
-        <div class="col-12 col-md-6 text-center mb-5 hotel-card">
-          <a href="/geofree.html">
-            <img src="img/giveaway.jpg" alt="img" class="img-fluid">
-          </a>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="/index.html"></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item text-center active">
+              <a class="nav-link mx-2" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item text-center">
+              <a class="nav-link mx-2" href="/about.html">About</a>
+            </li>
+          </ul>
         </div>
-        <div class="col-12 col-md-6 d-flex">
-          <div class="m-auto">
-            <h1 class="display-5 mt-auto text-center">Geofree</h1>
-            <p class="mt-3 text-center" style="font-size: 20px;">Find free items easily</p>
+      </div>
+    </nav>
+    <div class="wrapper">
+      <div class="container py-5">
+        <h1 class="display-4 my-5">
+          I'm Farida, a UX designer based in Germany, passionate about creating
+          beautiful and accessible digital products.
+        </h1>
+      </div>
+      <div class="container py-5">
+        <h3 class="mb-5 display-6 text-center">Case Studies</h3>
+        <div class="row mb-5">
+          <div class="col-12 col-md-6 text-center mb-5 hotel-card">
+            <a href="/geofree.html">
+              <img src="img/geofree/giveaway.jpg" alt="img" class="img-fluid" />
+            </a>
+          </div>
+          <div class="col-12 col-md-6 d-flex">
+            <div class="m-auto">
+              <h1 class="display-5 mt-auto text-center">Geofree</h1>
+              <p class="mt-3 text-center" style="font-size: 20px">
+                Find free items easily
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-12 col-md-6 text-center mb-5 hotel-card">
+            <a href="/hotel.html">
+              <img
+                src="img/hotel/hotel-image.jpeg"
+                alt="img"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+          <div class="col-12 col-md-6 d-flex">
+            <div class="m-auto">
+              <h1 class="display-5 mt-auto text-center">Hotel Booking</h1>
+              <p class="mt-3 text-center" style="font-size: 20px">
+                Improving hotel booking process for users
+              </p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="row mb-5">
-        <div class="col-12 col-md-6 text-center mb-5 hotel-card">
-          <a href="/hotel.html">
-            <img src="img/hotel-image.jpeg" alt="img" class="img-fluid">
-          </a>
-        </div>
-        <div class="col-12 col-md-6 d-flex">
-          <div class="m-auto">
-            <h1 class="display-5 mt-auto text-center">Hotel Booking</h1>
-            <p class="mt-3 text-center" style="font-size: 20px;">Improving hotel booking process for users</p>
-          </div>
-        </div>
+    </div>
+    <div class="container footer">
+      <hr />
+      <div class="div mt-auto">
+        <a class="footer-link p-3" href="/index.html">Home</a>
+        <a class="footer-link p-3" href="/about.html">About</a>
       </div>
     </div>
-  </div>
-  <div class="container footer">
-    <hr>
-    <div class="div mt-auto">
-      <a class="footer-link p-3" href="/index.html">Home</a>
-      <a class="footer-link p-3" href="/about.html">About</a>
-    </div>
-  </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-</body>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+  </body>
 </html>
