added inspiration baord

--- a/geofree.html
+++ b/geofree.html
@@ -188,7 +188,7 @@
               </div>
               <div class="col-9 col-md-12 d-flex align-items-center" style="display: block !important;">
                 <h4 class="m-0 text-left text-md-center mt-md-3 w-100">Prototype</h4>
-                <p class="text-center mt-3 text-muted px-1">Creating UI Mockups</p>
+                <p class="text-center mt-3 text-muted px-1">Inspiration Board<br/> Creating UI Mockups</p>
               </div>
             </div>
           </div>
@@ -199,7 +199,7 @@
               </div>
               <div class="col-9 col-md-12 d-flex align-items-center" style="display: block !important;">
                 <h4 class="m-0 text-left text-md-center mt-md-3 w-100">Test</h4>
-                <p class="text-center mt-3 text-muted px-1">Conduct User Test, Iterate, Refine</p>
+                <p class="text-center mt-3 text-muted px-1">Conduct User Test Iterate<br/> Refine</p>
               </div>
             </div>
           </div>
@@ -350,6 +350,16 @@
             </div>
           </a>
         </div>
+      </div>
+
+      <div class="m-5">
+        <p><b>Inspiration Board</b></p>
+        <p class="mb-5">Before starting the UI Mockups, I love to spend time on different sources searching for inspiration and creating a visual representation of all the images, texts, fonts, and colors. Here I collected some ideas with a focus on our main app color, green.</p>
+        <img
+            src="img/geofree/inspiration-board.png"
+            class="img-fluid w-100"
+            alt="testimonials"
+          />
       </div>
     </div>
   </div>
