--- a/geofree.html
+++ b/geofree.html
@@ -188,7 +188,7 @@
               </div>
               <div class="col-9 col-md-12 d-flex align-items-center" style="display: block !important;">
                 <h4 class="m-0 text-left text-md-center mt-md-3 w-100">Prototype</h4>
-                <p class="text-center mt-3 text-muted px-1">Inspiration Board<br/> Creating UI Mockups</p>
+                <p class="text-center mt-3 text-muted px-1">Inspiration Board<br/>Typography and Logos<br/> Creating UI Mockups</p>
               </div>
             </div>
           </div>
@@ -361,6 +361,16 @@
             alt="testimonials"
           />
       </div>
+
+      <div class="m-5">
+        <p><b>Typography and Logos</b></p>
+        <img
+            src="img/geofree/typography.png"
+            class="img-fluid w-100"
+            alt="testimonials"
+          />
+      </div>
+
     </div>
   </div>
   <div class=" container footer">
