changed wireframing text

--- a/geofree.html
+++ b/geofree.html
@@ -326,7 +326,7 @@
 
       <div class="m-5">
         <p><b>Wireframing</b></p>
-        <p class="mb-5">Tool used: Figma</p>
+        <p class="mb-5">Tool used: Figma.</p>
         <div id="slideshow-wireframe" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
